--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,24 @@
 <%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
   <%# if user_signed_in? %>
-    <li>First
+    <li>
+    <a href="http://google.com">First</a>
     <%# link_to('Logout', destroy_user_session_path, :method=>'delete') %>
     </li>
   <%# else %>
-    <li>Second
+    <li>
+    <a href="http://google.com">Second</a>
     <%# link_to('Login', new_user_session_path)  %>
     </li>
   <%# end %>
   <%# if user_signed_in? %>
-    <li>Third
+    <li>
+     <a href="http://google.com">Third</a>
     <%# link_to('Edit account', edit_user_registration_path) %>
     </li>
   <%# else %>
-    <li>Fourth
+    <li>
+    <a href="http://google.com">Fourth</a>
     <%#= link_to('Sign up', new_user_registration_path)  %>
     </li>
   <%# end %>
