--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,12 +2,12 @@
 <ul class="nav">
   <%# if user_signed_in? %>
     <li>
-    <a href="http://google.com">First</a>
+    <a href="/static_pages/home">Home</a>
     <%# link_to('Logout', destroy_user_session_path, :method=>'delete') %>
     </li>
   <%# else %>
     <li>
-    <a href="http://google.com">Second</a>
+    <a href="/static_pages/help">Help</a>
     <%# link_to('Login', new_user_session_path)  %>
     </li>
   <%# end %>
