a lot of messing with javascript mapping tools

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Region</th>
-    <th>Lattitude</th>
+    <th>Latitude</th>
     <th>Longitude</th>
     <th>Heading</th>
     <th>Pitch</th>
@@ -15,7 +15,7 @@
 <% @locations.each do |location| %>
   <tr>
     <td><%= location.region_id %></td>
-    <td><%= location.lattitude %></td>
+    <td><%= location.latitude %></td>
     <td><%= location.longitude %></td>
     <td><%= location.heading %></td>
     <td><%= location.pitch %></td>
