--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -26,6 +26,7 @@
 </p>
 
 <div id="streetViewContainer" style="width:100%; height:400px"></div>
+<%= javascript_include_tag 'https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initialize' %>
 <script type="text/javascript">
 function initialize() {
 pos = new google.maps.LatLng( <%= @location.latitude %>, <%=  @location.longitude %> );
