--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -1,13 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>User:</b>
-  <%= @study.user_id %>
-</p>
 
 <p>
-  <b>Integer:</b>
-  <%= @study.integer %>
+  <b>Name:</b>
+  <%= @study.name %>
 </p>
 
 <p>
