figured out how to add extra controllers, not sure if I should

--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -25,7 +25,7 @@
   <%= @study.public %>
 </p>
 
-
+<p>Before you can start collecting data, you must
 <%= link_to 'Edit', edit_study_path(@study) %> |
 <%= link_to 'Back', studies_path %>
 
