--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,25 +1,18 @@
 <%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
-  <%# if user_signed_in? %>
-    <li>
-    <a href="/static_pages/home">Home</a>
-    <%# link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-    </li>
-  <%# else %>
-    <li>
-    <a href="/static_pages/help">Help</a>
-    <%# link_to('Login', new_user_session_path)  %>
-    </li>
-  <%# end %>
-  <%# if user_signed_in? %>
-    <li>
-     <a href="http://google.com">Third</a>
-    <%# link_to('Edit account', edit_user_registration_path) %>
-    </li>
-  <%# else %>
-    <li>
-    <a href="http://google.com">Fourth</a>
-    <%#= link_to('Sign up', new_user_registration_path)  %>
-    </li>
-  <%# end %>
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Stuff <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><a href="#">Action</a></li>
+      <li><a href="#">Another action</a></li>
+      <li><a href="#">Something else here</a></li>
+      <li class="divider"></li>
+      <li class="nav-header">Nav header</li>
+      <li><a href="#">Separated link</a></li>
+      <li><a href="#">One more separated link</a></li>
+    </ul>
+  </li>
 </ul>
