--- a/app/views/my/index.html.erb
+++ b/app/views/my/index.html.erb
@@ -1,1 +1,10 @@
+<h1>My Stuff</h1>
+
+<h2>Studies</h2>
 <%= render 'studies/list', :studies => @studies %>
+
+<h2>Region Groups</h2>
+<%= render 'region_sets/list', :region_sets => @region_sets %>
+
+<h2>Regions</h2>
+<%= render 'regions/list', :studies => @studies %>
