--- a/app/views/region_sets/index.html.erb
+++ b/app/views/region_sets/index.html.erb
@@ -1,28 +1,6 @@
 <h1>Listing region_sets</h1>
 
-<table>
-  <tr>
-    <th>User</th>
-    <th>Slug</th>
-    <th>Name</th>
-    <th>Public</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @region_sets.each do |region_set| %>
-  <tr>
-    <td><%= region_set.user_id %></td>
-    <td><%= region_set.slug %></td>
-    <td><%= region_set.name %></td>
-    <td><%= region_set.public %></td>
-    <td><%= link_to 'Show', region_set %></td>
-    <td><%= link_to 'Edit', edit_region_set_path(region_set) %></td>
-    <td><%= link_to 'Destroy', region_set, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<%= render 'region_sets/list', :region_sets => @region_sets %>
 
 <br />
 
