--- a/app/views/regions/_list.html.erb
+++ b/app/views/regions/_list.html.erb
@@ -5,8 +5,6 @@
     <th>Name</th>
     <th>Public</th>
     <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @regions.each do |region| %>
@@ -15,9 +13,13 @@
     <td><%= region.slug %></td>
     <td><%= region.name %></td>
     <td><%= region.public %></td>
-    <td><%= link_to 'Show', region %></td>
-    <td><%= link_to 'Edit', edit_region_path(region) %></td>
-    <td><%= link_to 'Destroy', region, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td>
+      <%= link_to 'Show', region %>
+      <% if region.editable? %>
+      | <%= link_to 'Edit', edit_region_path(region) %>
+      | <%= link_to 'Destroy', region, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
+    </td>
   </tr>
 <% end %>
 </table>
