--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,7 @@
   <li><a href="#about">About</a></li>
   <li><a href="#contact">Contact</a></li>
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Stuff <b class="caret"></b></a>
+    <a href="/my/research" class="dropdown-toggle" data-toggle="dropdown">My Research <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="#">Action</a></li>
       <li><a href="#">Another action</a></li>
