--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing studies</h1>
 
-<%= render 'studies/list', :studies => @studies %>
+<%= render 'studies/list', :studies => @studies, :show_user => true  %>
 
 <br />
 
