--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,9 +6,10 @@
   <li class="dropdown">
     <a href="/my/research" class="dropdown-toggle" data-toggle="dropdown">My Research <b class="caret"></b></a>
     <ul class="dropdown-menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
+      <li><a href="/my/dashboard">Dashboard</a></li>
+      <li><a href="/my/studies">Studies</a></li>
+      <li><a href="/my/collections">Region Collections</a></li>
+      <li><a href="/my/regions">Regions</a></li>
       <li class="divider"></li>
       <li class="nav-header">Nav header</li>
       <li><a href="#">Separated link</a></li>
