--- a/app/views/region_sets/_list.html.erb
+++ b/app/views/region_sets/_list.html.erb
@@ -1,30 +1,24 @@
 
-<table>
+<table class="table table-striped table-hover">
   <tr>
+    <th>Name</th>
     <% if show_user  %>
       <th>User</th>
     <% end %>
-    <th>Slug</th>
-    <th>Name</th>
+    <th># Regions</th>
+    <th># Studies</th>
     <th>Public</th>
-    <th></th>
   </tr>
 
 <% @region_sets.each do |region_set| %>
   <tr>
+    <td><%= link_to region_set.name, region_set %></td>
     <% if show_user  %>
       <td><%= region_set.user_id %></td>
     <% end %>
-    <td><%= region_set.slug %></td>
-    <td><%= region_set.name %></td>
+    <td><%= region_set.regions.count %></td>
+    <td><%= region_set.studies.count %></td>
     <td><%= region_set.public %></td>
-    <td>
-      <%= link_to 'Show', region_set %>
-      <% if region_set.editable? %>
-      | <%= link_to 'Edit', edit_region_set_path(region_set) %>
-      | <%= link_to 'Destroy', region_set, method: :delete, data: { confirm: 'Are you sure?' } %>
-      <% end %>
-    </td>
   </tr>
 <% end %>
 </table>
