improved location listing, added research section

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,16 +4,21 @@
   <li><a href="#about">About</a></li>
   <li><a href="#contact">Contact</a></li>
   <li class="dropdown">
-    <a href="/my/research" class="dropdown-toggle" data-toggle="dropdown">My Research <b class="caret"></b></a>
+    <a href="/dashboard" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/studies">Studies</a></li>
+      <li><a href="/collections">Region Collections</a></li>
+      <li><a href="/regions">Regions</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="/my/dashboard" class="dropdown-toggle" data-toggle="dropdown">My Research <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/my/dashboard">Dashboard</a></li>
       <li><a href="/my/studies">Studies</a></li>
       <li><a href="/my/collections">Region Collections</a></li>
-      <li><a href="/my/regions">Regions</a></li>
-      <li class="divider"></li>
-      <li class="nav-header">Nav header</li>
-      <li><a href="#">Separated link</a></li>
-      <li><a href="#">One more separated link</a></li>
+      <li><a href="/my/regions">Regions</a></li>zs
     </ul>
   </li>
 </ul>
