--- a/app/views/region_sets/_list.html.erb
+++ b/app/views/region_sets/_list.html.erb
@@ -5,8 +5,8 @@
     <% if show_user  %>
       <th>User</th>
     <% end %>
-    <th># Regions</th>
-    <th># Studies</th>
+    <th># Regions Included</th>
+    <th># Studies Using</th>
     <th>Public</th>
   </tr>
 
