--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,30 +1,7 @@
 <h1>Listing locations</h1>
 
-<table>
-  <tr>
-    <th>Region</th>
-    <th>Latitude</th>
-    <th>Longitude</th>
-    <th>Heading</th>
-    <th>Pitch</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
-<% @locations.each do |location| %>
-  <tr>
-    <td><%= location.region_id %></td>
-    <td><%= location.latitude %></td>
-    <td><%= location.longitude %></td>
-    <td><%= location.heading %></td>
-    <td><%= location.pitch %></td>
-    <td><%= link_to 'Show', location %></td>
-    <td><%= link_to 'Edit', edit_location_path(location) %></td>
-    <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<%= render 'locations/list', :locations => @locations %>
 
 <br />
 
