fixed error in navigation

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,7 +18,7 @@
       <li><a href="/my/dashboard">Dashboard</a></li>
       <li><a href="/my/studies">Studies</a></li>
       <li><a href="/my/collections">Region Collections</a></li>
-      <li><a href="/my/regions">Regions</a></li>zs
+      <li><a href="/my/regions">Regions</a></li>
     </ul>
   </li>
 </ul>
