--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,25 +1,36 @@
 <%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
-  <%# if user_signed_in? %>
-    <li>
+  <!-- MF - Static Pages -->
+  <li>
     <a href="/static_pages/home">Home</a>
-    <%# link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-    </li>
-  <%# else %>
-    <li>
+  </li>
+  <li>
+   <a href="/static_pages/about">About</a>
+  </li>
+  <li>
     <a href="/static_pages/help">Help</a>
+  </li>
+  <li>
+    <!-- MF - will need to update once course is live -->
+    <a href="https://www.coursera.org/course/techcity">Course Page</a>
+  </li>
+    
+  <%# if user_signed_in? %>
+        
+    <%# link_to('Logout', destroy_user_session_path, :method=>'delete') %>
+    
+  <%# else %>
+    
     <%# link_to('Login', new_user_session_path)  %>
-    </li>
+
   <%# end %>
   <%# if user_signed_in? %>
-    <li>
-     <a href="http://google.com">Third</a>
+
     <%# link_to('Edit account', edit_user_registration_path) %>
-    </li>
+
   <%# else %>
-    <li>
-    <a href="http://google.com">Fourth</a>
+
     <%#= link_to('Sign up', new_user_registration_path)  %>
-    </li>
+
   <%# end %>
 </ul>
