--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,5 @@
 <%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
-<<<<<<< HEAD
   <!-- MF - static pages -->
   <li>
     <a href="/static_pages/home">Home</a>
@@ -15,38 +14,36 @@
     <!-- MF - will need to adjust when course starts -->
     <a href="https://www.coursera.org/course/techcity">Technicity Course</a>
   </li>
-  
+
   <%# if user_signed_in? %>
-    
+
     <%# link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-    
+
   <%# else %>
-    
-    
+
+
     <%# link_to('Login', new_user_session_path)  %>
 
   <%# end %>
   <%# if user_signed_in? %>
-    
+
     <%# link_to('Edit account', edit_user_registration_path) %>
-   
+
   <%# else %>
-    
+
     <%#= link_to('Sign up', new_user_registration_path)  %>
 
   <%# end %>
-=======
 
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="/about">About</a></li>
-  <!-- <li><a href="contact">Contact</a></li> -->
   <li class="dropdown">
-    <a href="/dashboard" class="dropdown-toggle" data-toggle="dropdown">Research <b class="caret"></b></a>
+    <a href="/dashboard" class="dropdown-toggle" data-toggle="dropdown">Public Studies <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/studies">Studies</a></li>
+      <!--
       <li><a href="/collections">Region Collections</a></li>
       <li><a href="/regions">Regions</a></li>
+      -->
     </ul>
   </li>
   <!-- MF will need an "if logged in" here -->
@@ -59,7 +56,4 @@
       <li><a href="/my/regions">Regions</a></li>
     </ul>
   </li>
-  <li><a href="/help">Help</a></li>
-  <li><a href="https://www.coursera.org/course/techcity">Course Page</a></li>
->>>>>>> mf-dev
 </ul>
