changed nomenclature in listings and nav

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -52,8 +52,8 @@
     <ul class="dropdown-menu">
       <li><a href="/my/dashboard">Dashboard</a></li>
       <li><a href="/my/studies">Studies</a></li>
-      <li><a href="/my/collections">Region Collections</a></li>
-      <li><a href="/my/regions">Regions</a></li>
+      <li><a href="/my/collections">Image Sets</a></li>
+      <li><a href="/my/regions">Areas</a></li>
     </ul>
   </li>
 </ul>
