--- a/app/views/my/dashboard.html.erb
+++ b/app/views/my/dashboard.html.erb
@@ -4,10 +4,10 @@
 <%= render 'studies/list', :studies => @studies, :show_user => false %>
 <%= link_to 'New Study', new_study_path %>
 
-<h2>Region Collections</h2>
+<h2>Image Sets</h2>
 <%= render 'region_sets/list', :region_sets => @region_sets, :show_user => false %>
 <%= link_to 'New Region Collection', new_region_set_path %>
 
-<h2>Regions</h2>
+<h2>Areas</h2>
 <%= render 'regions/list', :regions => @regions, :show_user => false %>
 <%= link_to 'New Region', new_region_path %>
