--- a/app/views/region_sets/_list.html.erb
+++ b/app/views/region_sets/_list.html.erb
@@ -5,7 +5,7 @@
     <% if show_user  %>
       <th>User</th>
     <% end %>
-    <th># Regions Included</th>
+    <th># Areas Included</th>
     <th># Studies Using</th>
     <th>Public</th>
   </tr>
