--- a/app/views/regions/_list.html.erb
+++ b/app/views/regions/_list.html.erb
@@ -5,7 +5,7 @@
       <th>User</th>
     <% end %>
     <th># Locations Included</th>
-    <th># Collections Using</th>
+    <th># Image Sets Using</th>
     <th>Public</th>
   </tr>
 <% @regions.each do |region| %>
