--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Region: <%= @region.name %></h1>
+<h1>Area: <%= @region.name %></h1>
 <small>
   Slug: <%= @region.slug %><br />
   User: <%= @region.user.name %>
