--- a/app/views/studies/_list.html.erb
+++ b/app/views/studies/_list.html.erb
@@ -6,7 +6,7 @@
     <% if show_user  %>
       <th>User</th>
     <% end %>
-    <th>Region Collection</th>
+    <th>Image Set</th>
     <th>Votes</th>
     <th>Public</th>
   </tr>
