--- a/app/views/my/collections.html.erb
+++ b/app/views/my/collections.html.erb
@@ -1,5 +1,5 @@
-<h1>My Region Collections</h1>
+<h1>My Image Sets</h1>
 
 <%= render 'region_sets/list', :region_sets => @region_sets, :show_user => false %>
-<%= link_to 'New Region Collection', new_region_set_path %>
+<%= link_to 'New Image Set', new_region_set_path %>
 
