--- a/app/views/my/index.html.erb
+++ b/app/views/my/index.html.erb
@@ -3,8 +3,8 @@
 <h2>Studies</h2>
 <%= render 'studies/list', :studies => @studies, :show_user => false %>
 
-<h2>Region Groups</h2>
+<h2>Image Sets</h2>
 <%= render 'region_sets/list', :region_sets => @region_set, :show_user => false %>
 
-<h2>Regions</h2>
+<h2>Areas</h2>
 <%= render 'regions/list', :studies => @studies, :show_user => false %>
