many region set to image set fixes

--- a/app/views/region_set_memberships/show.html.erb
+++ b/app/views/region_set_memberships/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Region set:</b>
+  <b>Image Set:</b>
   <%= @region_set_membership.region_set_id %>
 </p>
 
 <p>
-  <b>Region:</b>
+  <b>Area:</b>
   <%= @region_set_membership.region_id %>
 </p>
 
