--- a/app/views/region_sets/index.html.erb
+++ b/app/views/region_sets/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Listing region_sets</h1>
+<h1>Listing Image Sets</h1>
 
 <%= render 'region_sets/list', :region_sets => @region_sets %>
 
 <br />
 
-<%= link_to 'New Region set', new_region_set_path %>
+<%= link_to 'New Image Set', new_region_set_path %>
