--- a/app/views/region_set_memberships/index.html.erb
+++ b/app/views/region_set_memberships/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing region_set_memberships</h1>
+<h1>Listing Image Set Memberships</h1>
 
 <table>
   <tr>
-    <th>Region set</th>
-    <th>Region</th>
+    <th>Image Set</th>
+    <th>Area</th>
     <th></th>
     <th></th>
     <th></th>
@@ -22,4 +22,4 @@
 
 <br />
 
-<%= link_to 'New Region set membership', new_region_set_membership_path %>
+<%= link_to 'New Image Set Membership', new_region_set_membership_path %>
