changed collection to imageset under my

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -41,8 +41,8 @@
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/studies">Studies</a></li>
       <!--
-      <li><a href="/collections">Region Collections</a></li>
-      <li><a href="/regions">Regions</a></li>
+      <li><a href="/imagesets">Image Sets</a></li>
+      <li><a href="/regions">Areas</a></li>
       -->
     </ul>
   </li>
@@ -52,7 +52,7 @@
     <ul class="dropdown-menu">
       <li><a href="/my/dashboard">Dashboard</a></li>
       <li><a href="/my/studies">Studies</a></li>
-      <li><a href="/my/collections">Image Sets</a></li>
+      <li><a href="/my/imagesets">Image Sets</a></li>
       <li><a href="/my/regions">Areas</a></li>
     </ul>
   </li>
