--- a/app/views/my/dashboard.html.erb
+++ b/app/views/my/dashboard.html.erb
@@ -6,7 +6,7 @@
 
 <h2>Image Sets</h2>
 <%= render 'region_sets/list', :region_sets => @region_sets, :show_user => false %>
-<%= link_to 'New Region Collection', new_region_set_path %>
+<%= link_to 'New Image Set', new_region_set_path %>
 
 <h2>Areas</h2>
 <%= render 'regions/list', :regions => @regions, :show_user => false %>
