--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,15 +27,17 @@
     </ul>
   </li>
   <!-- MF will need an "if logged in" here -->
-  <li class="dropdown">
-    <a href="/my/dashboard" class="dropdown-toggle" data-toggle="dropdown">My Research <b class="caret"></b></a>
-    <ul class="dropdown-menu">
-      <li><a href="/my/dashboard">Dashboard</a></li>
-      <li><a href="/my/studies">Studies</a></li>
-      <li><a href="/my/collections">Image Sets</a></li>
-      <li><a href="/my/regions">Areas</a></li>
-    </ul>
-  </li>
+  <% if user_signed_in? %>
+    <li class="dropdown">
+      <a href="/my/dashboard" class="dropdown-toggle" data-toggle="dropdown">My Research <b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <li><a href="/my/dashboard">Dashboard</a></li>
+        <li><a href="/my/studies">Studies</a></li>
+        <li><a href="/my/collections">Image Sets</a></li>
+        <li><a href="/my/regions">Areas</a></li>
+      </ul>
+    </li>
+  <% end %>
   
   <div id="user_nav">
     <% if user_signed_in? %>
