added some very basic new study workflow

--- a/app/views/studies/_form.html.erb
+++ b/app/views/studies/_form.html.erb
@@ -1,29 +1,28 @@
-<%= form_for(@study) do |f| %>
-  <% if @study.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@study.errors.count, "error") %> prohibited this study from being saved:</h2>
+<%# This form handles the generic bits %>
 
-      <ul>
-      <% @study.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+<!-- :html => {:class => "form-horizontal"} -->
+<%= simple_form_for(@study) do |f| %>
+  <%= f.input :name,
+              :hint => 'A short, friendly name by which to remember your study.' %>
+  <%= f.input :description,
+              :as => :text,
+              :input_html => { :rows => 4 },
+              :hint => 'A sentence or two describing your study.' %>
+  <!--
+  This needs to be moved to a precursor step if we ever add the multiple choice option
+  <%= f.input :type,
+              :collection => [['Comparison (should be augmented with a picture)', 'StudyComparison'], ['Multiple Choice (should be augmented with a picture)', 'StudyMultipleChoice']],
+              :hint => 'The type of study you are conducting.',
+              as: :radio_buttons %>
+  -->
+
+  <% case @study.type
+     when 'StudyComparison' %>
+        <%= f.input :question, label: 'Which place looks...?',
+                    :hint => 'Finish the question (more livable, safer, nicer, etc)' %>
+  <% when 'StudyMultipleChoice' %>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :question %><br />
-    <%= f.text_field :question %>
-  </div>
-  <div class="field">
-    <%= f.label :public %><br />
-    <%= f.check_box :public %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.button :submit%>
 <% end %>
+
