--- a/app/views/regions/new.html.erb
+++ b/app/views/regions/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New Area</h1>
+<% if @study.nil? %>
+  <h1>New Area</h1>
+<% else %>
+  <h1>Add Area to Study: <%= @study.name %></h1>
+<% end %>
 
 <%= render 'form' %>
 
