--- a/app/views/regions/_list.html.erb
+++ b/app/views/regions/_list.html.erb
@@ -1,5 +1,6 @@
 <table class="table table-striped table-hover">
   <tr>
+    <th></th>
     <th>Name</th>
     <% if show_user  %>
       <th>User</th>
@@ -10,6 +11,7 @@
   </tr>
 <% @regions.each do |region| %>
   <tr>
+    <td><img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&amp;location=<%= @region.latitude %>,%20<%= @region.longitude %>&amp;sensor=false"></td>
     <td><%= link_to region.name, region %></td>
     <% if show_user  %>
       <td><%= region.user_id %></td>
