reorganized study pages

--- a/app/views/studies/analyze.html.erb
+++ b/app/views/studies/analyze.html.erb
@@ -1,4 +1,7 @@
 <%= render 'header', :study => @study %>
+
+<p>Todo: analyze stuff</p>
+
 <p>
   <strong>Description</strong><br />
   <%= @study.description %>
