--- a/app/views/studies/_header.html.erb
+++ b/app/views/studies/_header.html.erb
@@ -22,4 +22,19 @@
     <a href="<%= url_for :controller => "studies", :action => "edit", :id => @study %>">
       <i class="icon-edit" style=""></i> Edit</a>
     </li>
+  <!-- security - curate should only show if study is public -->
+  <% if !@study.region_set.nil? && @study.region_set.regions.count > 0 %>
+  <li class="dropdown <%= 'active' if url_for() == url_for(:controller => "studies", :action => "curate", :id => @study) %>">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="<%= url_for :controller => "studies", :action => "edit", :id => @study %>">
+      <i class="icon-th" style=""></i> Curate<b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <% @study.region_set.regions.each do |region| %>
+        <li>
+          <a href="<%= url_for :controller => "studies", :action => "curate", :id => @study %>?region_id=<%= region.id %>">
+            <%= region.name %></a>
+          </li>
+        <% end %>
+      </ul>
+    </li>
+  <% end %>
 </ul>
