slight improvements to curate

--- a/app/views/studies/_header.html.erb
+++ b/app/views/studies/_header.html.erb
@@ -1,7 +1,7 @@
 <div style="float:right;width:200px;">
   <small>
   Slug: <%= @study.slug %><br />
-  User: <%= @study.user.name %>
+  Owner: <%= @study.user.name %>
   </small>
 </div>
 <h1><%= @study.name %></h1>
