--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,6 +1,10 @@
 @import "bootstrap";
-body { padding-top: 120px; }
 
+body { padding-top: 60px; }
+
+#usernav {
+  float: right;
+  }
 
 @import "bootstrap-responsive";
 
