--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,22 +11,38 @@
     <%= yield(:head) %>
   </head>
   <body >
-    <header class="navbar navbar-fixed-top">
-      <nav class="navbar-inner">
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
         <div class="container">
-          <%= render 'layouts/navigation' %>
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="home">StreetSeen</a>
+          <div class="nav-collapse">
+            <%= render 'layouts/navigation' %>
+          </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </div>
     <div id="main" role="main">
       <div class="container">
-        <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
-            </div>
+        <div class="row">
+          <div class="span12">
+            <%= render 'layouts/messages' %>
+            <%= yield %>
           </div>
+        </div>
+        <div class="row">
+          <div class="span3"
+          <h2>About</h2>
+          </div>
+          <div class="span3"
+          </div>
+          <div class="span3"
+          </div>
+      </div>
 
         </div>
       </div> <!--! end of .container -->
