--- a/app/views/regions/_form.html.erb
+++ b/app/views/regions/_form.html.erb
@@ -1,4 +1,7 @@
 <%= simple_form_for(@region) do |f| %>
+  <div style="width: 500px; float:right;">
+    <div id="map" style="width: 500; height: 350;"></div>
+  </div>
   <%= f.input :name,
               :hint => 'A short, friendly name by which to remember this area.' %>
   <%= f.input :description,
@@ -11,88 +14,92 @@
   <% if !@create_set.nil? %>
     <%= hidden_field_tag :create_set,  true %>
   <% end %>
+  <%= hidden_field_tag   :points %>
 
-  <% if true %>
-    <div id="map" style="width: 500; height: 350;"></div>
-    <%= f.input :latitude %>
-    <%= f.input :longitude %>
-    <%= f.input :zoom %>
-    <%= f.input :polygon %>
-  <% end %>
+  <%= f.input :latitude,  :as => :hidden %>
+  <%= f.input :longitude, :as => :hidden %>
+  <%= f.input :zoom,      :as => :hidden %>
+  <%= f.input :polygon,   :as => :hidden %>
 
   <div class="actions">
-    <%= f.submit 'Create Area' %>
+    <button type="button" class="btn btn-primary" onclick="update_populate_and_submit();">
+      <i class="icon-ok icon-white"></i> Populate & Create Area
+    </button>
   </div>
 
 
 <% end %>
 
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
   /**
-   * This code is based on this example
-   * http://gmaps-samples-v3.googlecode.com/svn/trunk/poly/poly_edit.html
+   * These variables are global in scope.
+   * They are used by functions in polygon.js.
    */
-  var poly, map;
+  var map;
+  var polygon;
   var markers = [];
+  var locations = [];
   var path = new google.maps.MVCArray;
+
+  // The google maps api requires us to use an onload initializer.
   window.onload = initialize;
 
+  /**
+   * Initializes are map.
+   */
   function initialize() {
 
-    map = new google.maps.Map(document.getElementById("map"), {
-      zoom: 5,
-      center: new google.maps.LatLng(40, -80),
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
+    var center = new google.maps.LatLng(39.9611, -82.9989);
+    var zoom = 10;
 
-    poly = new google.maps.Polygon({
-      strokeWeight: 3,
-      fillColor: '#5555FF'
-    });
-    poly.setMap(map);
-    poly.setPaths(new google.maps.MVCArray([path]));
-
+    map = initializeMap('map', center, zoom, true);
     google.maps.event.addListener(map, 'click', addPoint);
   }
 
-  function addPoint(event) {
-    path.insertAt(path.length, event.latLng);
+  /**
+   * Submit callback for the form.
+   * For now, this populates points, sets form values, and then submits.
+   * This should probably be refactored to improve UI.
+   */
+  function update_populate_and_submit() {
 
-    var marker = new google.maps.Marker({
-      position: event.latLng,
-      map: map,
-      draggable: true
-    });
-    markers.push(marker);
-    marker.setTitle("#" + path.length);
+    // Don't do anything if there aren't enough markers to define a triangle
+    if (markers.length > 2) {
 
-    google.maps.event.addListener(marker, 'click', function() {
-      marker.setMap(null);
-      for (var i = 0, I = markers.length; i < I && markers[i] != marker; ++i);
-      markers.splice(i, 1);
-      path.removeAt(i);
-      }
-    );
+      // First render the map readonly and repopulate points
+      // Next lets populate some points and ensure they are in streetview
+      populatePoints(50);
 
-    google.maps.event.addListener(marker, 'dragend', function() {
-      for (var i = 0, I = markers.length; i < I && markers[i] != marker; ++i);
-      path.setAt(i, marker.getPosition());
-      }
-    );
-    if (markers.length > 0) {
-      var value = markers[0].position;
+      // Next lets submit the form
+      setInterval(check_submit, 1000);
+    }
+  }
+
+  function check_submit() {
+    if (locations.length > 9) {
+      // Lets build a string representation of the polygon
+      var polygon_string = markers[0].position;
       for (var i = 1; i < markers.length; ++i) {
-        value = value + ', ' + markers[i].position;
+        polygon_string = polygon_string + ', ' + markers[i].position;
       }
-      document.getElementById('region_polygon').value = value;
+
+      // Lets build a string representation of the locations
+      var location_string = locations[0].position;
+      for (var i = 1; i < locations.length; ++i) {
+        location_string = location_string + ', ' + locations[i].position;
+      }
+
+      // Next lets record some of this information in the form
+      document.getElementById('points').value = location_string; // should be json?
+      document.getElementById('region_polygon').value = polygon_string; // should be json?
       document.getElementById('region_zoom').value = map.zoom;
 
       var center = map.getCenter();
       document.getElementById('region_latitude').value = center.lat();
       document.getElementById('region_longitude').value = center.lng();
+
+      document.getElementById('new_region').submit();
     }
   }
 </script>
-
