Coursera implemented and authorization for studies

--- a/app/views/studies/_header.html.erb
+++ b/app/views/studies/_header.html.erb
@@ -1,7 +1,8 @@
 <div style="float:right;width:200px;">
   <small>
   Slug: <%= @study.slug %><br />
-  Owner: <%= @study.user.name %>
+  <!-- MF placeholder, should display name here -->
+  Owner: <%= @study.user_id %>
   </small>
 </div>
 <h1><%= @study.name %></h1>
