--- a/app/views/region_sets/_form.html.erb
+++ b/app/views/region_sets/_form.html.erb
@@ -2,13 +2,13 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :user_id %>
-    <%= f.input :slug %>
     <%= f.input :name %>
-    <%= f.input :public %>
+    <%= f.input :description %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
 <% end %>
+
+
