More styling and static pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,14 +34,16 @@
             <%= yield %>
           </div>
         </div>
-        <div class="row">
-          <div class="span3"
-          <h2>About</h2>
+        <!-- MF may add back in<div class="row" id="bottom-trio">
+          <div class="span4">
+          <h3>Explore StreetSeen</h3>
           </div>
-          <div class="span3"
+          <div class="span4">
+          <h3>Get the Code</h3>
           </div>
-          <div class="span3"
-          </div>
+          <div class="span4">
+          <h3>Contact Us</h3>
+          </div> -->
       </div>
 
         </div>
