--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,13 +1,29 @@
 <h1>Technicity</h1>
-<h2>About the App</h2>
-<p> License and attribution, etc. </p>
+<h3>License</h3>
+<p>This software is licensed under the GPLv2 license and can be found on github here.</p>
 
-<h2>About the Team</h2>
-<p>Jennifer Cowley</p>
-<p>Jason Little</p>
-<p>Meghan Frazer</p>
-<p>Kermit the Frog</p>
+<h3>About the Team</h3>
+<p><strong>Dr. Jennifer Evans-Cowley</strong> is the Associate Dean for Academic Affairs and 
+Administration in the College of Engineering and Professor of City and Regional Planning 
+in the Knowlton School of Architecture at The Ohio State University. She has passionate 
+interests in technology that can help the public engage in participatory planning 
+for the future of cities. She was named by Planetizen as one of the top 25 leading 
+thinkers in urban planning and technology. She has won numerous awards for her 
+teaching, advising, and research. Cowley publishes and speaks widely on technology 
+and the future of the city. You can follow Dr. Evans-Cowley on Twitter @EvansCowley.</p> 
+<p><strong>Jason Little</strong> is the  Systems Engineer,  Engineering Computing Services 
+in the College of Engineering at the The Ohio State University.  He serves as the 
+technical lead for centralized web development within the College ...needs more</p>
+<p><strong>Meghan Frazer</strong> is the Digital Resources Curator for the 
+Knowlton School of Architecture at The Ohio State University.  She manages the 
+school archives, the KSA Digital Library, and supports educational technology 
+efforts by working on projects like StreetSeen.  Her professional interests include 
+digital content preservation and data visualization. You can send tweets in her 
+direction using @meghanfrazer.</p>
+<p><strong>Shaun Rowland</strong> ...needs bio</p>
+<p><strong>Corey Hinshaw</strong> ...needs bio</p>
 
-<h2>Contact Us</h2>
-<p>Email address for app?</p>
-<p>COE address?</p>
+
+<h3>Credits</h3>
+<p>Mooculus code</p>
+
