--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,5 @@
 <h1>Help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h2>Create a Study</h2>
+<h2>Add an Image Set</h2>
+<h2>Edit a Study</h2>
+<h2>View Results</h2>
