--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -5,7 +5,7 @@
 <p>
   <small>
     Slug: <%= @region.slug %><br />
-    Owner: <%= @region.user.name %>
+    Owner: <%= @region.user.email %>
   </small>
 </p>
 <p><strong>Description:</strong><br /><%= @region.description %><p>
